--- a/src/pages/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-entity-register/tracker-entity-register.html
@@ -19,81 +19,93 @@
     <div *ngIf="!isLoading">
       <div *ngFor="let content of registrationContents">
         <div *ngIf="(isRegistrationContentOpen[content.id])" >
+
+
           <ion-row>
             <ion-col>
-              <img  class="side-menu-icon" [src]="content.icon"/>&nbsp;&nbsp;
-              <span ion-text ><b>{{ content.name }}</b></span>
+              <div class="item-card">
+                <img  class="side-menu-icon" [src]="content.icon"/>&nbsp;&nbsp;
+                <span ion-text ><b>{{ content.name }}</b></span>
+              </div>
             </ion-col>
           </ion-row>
-          <div class="item-card">
-            <div *ngIf="content.id == 'enrollment'"  >
-              <div class="inputLabel">
-                Enrolling organisation unit
+          <ion-row>
+            <ion-col>
+              <div class="item-card">
+                <div *ngIf="content.id == 'enrollment'"  >
+                  <div class="inputLabel">
+                    Enrolling organisation unit
+                  </div>
+                  <div class="input-field-container">
+                    <ion-item>
+                      <ion-input [(ngModel)]="currentOrganisationUnit.name" readonly="true"></ion-input>
+                    </ion-item>
+                  </div>
+                  <div *ngIf="isTrackedEntityRegistered">
+                    <div class="inputLabel">
+                      {{ currentProgram.enrollmentDateLabel}}
+                    </div>
+                    <div class="input-field-container">
+                      <ion-item>
+                        <ion-input [(ngModel)]="enrollmentDate" readonly="true"></ion-input>
+                      </ion-item>
+                    </div>
+                    <div class="inputLabel">
+                      {{ currentProgram.incidentDateLabel}}
+                    </div>
+                    <div class="input-field-container">
+                      <ion-item>
+                        <ion-input [(ngModel)]="incidentDate" readonly="true"></ion-input>
+                      </ion-item>
+                    </div>
+                  </div>
+                  <div *ngIf="!isTrackedEntityRegistered">
+                    <div class="inputLabel">
+                      {{ currentProgram.enrollmentDateLabel}}
+                    </div>
+                    <div class="input-field-container">
+                      <ion-item>
+                        <ion-datetime [(ngModel)]="enrollmentDate" doneText="Update" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" ></ion-datetime>
+                      </ion-item>
+                    </div>
+                    <div class="inputLabel">
+                      {{ currentProgram.incidentDateLabel}}
+                    </div>
+                    <div class="input-field-container">
+                      <ion-item>
+                        <ion-datetime [(ngModel)]="incidentDate" doneText="Update" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" ></ion-datetime>
+                      </ion-item>
+                    </div>
+                  </div>
+                </div>
+                <div *ngIf="content.id == 'profile'">
+                  <div *ngIf="programTrackedEntityAttributes && programTrackedEntityAttributes.length > 0">
+                    <div *ngFor="let programTrackedEntityAttribute of programTrackedEntityAttributes">
+                      <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute"
+                                             [currentUser]="currentUser"
+                                             [data]="dataObject"
+                                             [mandatory]="programTrackedEntityAttribute.mandatory"
+                                             (onChange)="updateData($event)"></tracked-entity-inputs>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="input-field-container">
-                <ion-item>
-                  <ion-input [(ngModel)]="currentOrganisationUnit.name" readonly="true"></ion-input>
-                </ion-item>
-              </div>
-              <div *ngIf="isTrackedEntityRegistered">
-                <div class="inputLabel">
-                  {{ currentProgram.enrollmentDateLabel}}
-                </div>
-                <div class="input-field-container">
-                  <ion-item>
-                    <ion-input [(ngModel)]="enrollmentDate" readonly="true"></ion-input>
-                  </ion-item>
-                </div>
-                <div class="inputLabel">
-                  {{ currentProgram.incidentDateLabel}}
-                </div>
-                <div class="input-field-container">
-                  <ion-item>
-                    <ion-input [(ngModel)]="incidentDate" readonly="true"></ion-input>
-                  </ion-item>
-                </div>
-              </div>
-              <div *ngIf="!isTrackedEntityRegistered">
-                <div class="inputLabel">
-                  {{ currentProgram.enrollmentDateLabel}}
-                </div>
-                <div class="input-field-container">
-                  <ion-item>
-                    <ion-datetime [(ngModel)]="enrollmentDate" doneText="Update" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" ></ion-datetime>
-                  </ion-item>
-                </div>
-                <div class="inputLabel">
-                  {{ currentProgram.incidentDateLabel}}
-                </div>
-                <div class="input-field-container">
-                  <ion-item>
-                    <ion-datetime [(ngModel)]="incidentDate" doneText="Update" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" ></ion-datetime>
-                  </ion-item>
-                </div>
-              </div>
-            </div>
-            <div *ngIf="content.id == 'profile'">
-              <div *ngIf="programTrackedEntityAttributes && programTrackedEntityAttributes.length > 0">
-                <div *ngFor="let programTrackedEntityAttribute of programTrackedEntityAttributes">
-                  <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute"
-                                         [currentUser]="currentUser"
-                                         [data]="dataObject"
-                                         [mandatory]="programTrackedEntityAttribute.mandatory"
-                                         (onChange)="updateData($event)"></tracked-entity-inputs>
-                </div>
-              </div>
-            </div>
-          </div>
+            </ion-col>
+          </ion-row>
         </div>
       </div>
     </div>
+    <ion-row>
+      <ion-col>&nbsp;&nbsp;</ion-col>
+    </ion-row>
   </ion-grid>
+
 </ion-content>
 <ion-footer>
   <ion-toolbar>
     <div ion-button clear text-capitalize *ngFor="let content of registrationContents" (tap)="toggleRegistrationContents(content)">
       <img  class="footer-icon" [src]="content.icon"/>&nbsp;&nbsp;
-      <span>{{ content.name }}</span>
+      <span ion-text [color]="(isRegistrationContentOpen[content.id]) ?'current' : 'font-color'">{{ content.name }}</span>
     </div>
   </ion-toolbar>
 </ion-footer>
