Render table columns on event capture based on visible columns

--- a/src/pages/data-entry/data-entry.html
+++ b/src/pages/data-entry/data-entry.html
@@ -42,7 +42,7 @@
               </div>
             </div>
           </div>
-          <div class="item-card" padding-top padding-bottom *ngIf="!isDataSetDimensionApplicable">
+          <div class="item-card" *ngIf="!isDataSetDimensionApplicable">
             <warning [warningMessage]="isDataSetDimensionApplicableCategoriesMessage" ></warning>
           </div>
         </div>
