--- a/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -25,7 +25,6 @@
             <ion-row>
               <ion-col>
                 <span ion-text text-capitalize><b>{{ widget.name }}</b></span>
-                <hr>
               </ion-col>
             </ion-row>
           </div>
@@ -64,7 +63,7 @@
                 <div *ngIf="programStages && programStages.length > 0">
                   <div *ngFor="let programStage of programStages">
                     <div *ngIf="widget.id == programStage.id">
-                      {{ programStage|json }}
+                      <program-stage [programStage]="programStage"></program-stage>
                     </div>
                   </div>
                 </div>
