Prepare empty event in case of new event and add logics for loading events by attribute

--- a/src/pages/event-capture-register/event-capture-register.html
+++ b/src/pages/event-capture-register/event-capture-register.html
@@ -20,7 +20,7 @@
     <div *ngIf="!isLoading">
       <ion-row>
         <ion-col>
-          <program-stage-event-based [programStage]="programStage" [dataDimension]="dataDimension"></program-stage-event-based>
+          <program-stage-event-based [programStage]="programStage" [dataDimension]="dataDimension" [currentEvent]="currentEvent" ></program-stage-event-based>
         </ion-col>
       </ion-row>
     </div>
