Fetching events based on events caapture selections

--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -82,6 +82,10 @@
           </ion-col>
         </ion-row>
 
+        <div >currentEvents : </div>
+        {{ currentEvents |json }}
+
+
       </div>
     </div>
   </ion-grid>
