--- a/src/pages/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-entity-register/tracker-entity-register.html
@@ -23,9 +23,9 @@
 
           <ion-row>
             <ion-col>
-              <div class="item-card">
+              <div class="item-card" padding-top padding-bottom >
                 <img  class="side-menu-icon" [src]="content.icon"/>&nbsp;&nbsp;
-                <span ion-text ><b>{{ content.name }}</b></span>
+                <span ion-text text-capitalize ><b>{{ content.name }}</b></span>
               </div>
             </ion-col>
           </ion-row>
