Update events storage structure to resolve issues on porgram stages data entry

--- a/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -84,7 +84,7 @@
                   <div *ngIf="programStages && programStages.length > 0">
                     <div *ngFor="let programStage of programStages">
                       <div *ngIf="widget.id == programStage.id">
-                        <program-stage-tracker-based [programStage]="programStage"></program-stage-tracker-based>
+                        <program-stage-tracker-based [programStage]="programStage" [trackedEntityInstance]="trackedEntityInstance.id"></program-stage-tracker-based>
                       </div>
                     </div>
                   </div>
