--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -41,10 +41,10 @@
       <div *ngIf="isLoading">
         <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
       </div>
-      <div *ngIf="!isLoading">
+      <div *ngIf="!isLoading" class="over-flow-container">
         <ion-row>
           <ion-col>
-            <div *ngIf="tableLayout">
+            <div *ngIf="tableLayout" >
               <table class="table table-bordered" width="100%" >
                 <thead *ngIf="tableLayout && tableLayout.headers">
                 <tr >
