Render table like interface for repeatebale stages

--- a/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -87,7 +87,7 @@
                 </div>
               </div>
               <div *ngIf="currentWidget.id != 'enrollment'">
-                <div class="item-card">
+                <div>
                   <div *ngIf="programStages && programStages.length > 0">
                     <div *ngFor="let programStage of programStages">
                       <div *ngIf="widget.id == programStage.id">
