--- a/src/pages/update-manager-home/update-manager-home.html
+++ b/src/pages/update-manager-home/update-manager-home.html
@@ -39,32 +39,39 @@
         </div>
 
         <div *ngIf="syncContent.id == 'downloadMetadata'">
-          <ion-row>
-            <ion-col col-6>
-              <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button small full text-capitalize class="normalButton" (tap)="checkingForResourceUpdate()">Update</button>
-            </ion-col>
-            <ion-col col-6>
-              <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button small full text-capitalize class="normalButton" (tap)="autoSelect('selectAll')" *ngIf="!hasAllSelected"> Select All</button>
-              <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button small full text-capitalize class="normalButton" (tap)="autoSelect('unSelectAll')" *ngIf="hasAllSelected">Un-select all</button>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col >
-              <ion-list>
-                <div *ngFor="let resourceObject of resources">
-                  <ion-item>
-                    <ion-label>{{ resourceObject.displayName }}</ion-label>
-                    <ion-checkbox [(ngModel)]="resourceObject.status" color="favorite"></ion-checkbox>
-                  </ion-item>
-                </div>
-              </ion-list>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col >
-              <button ion-button large small text-capitalize class="normalButton" (tap)="checkingForResourceUpdate()">Update</button>
-            </ion-col>
-          </ion-row>
+          <div *ngIf="updateManagerObject.updateMetadata.isProcessRunning">
+            <page-loading loadingSize="large" [loadingMessage]="updateMetadataLoadingMessages"></page-loading>
+          </div>
+          <div *ngIf="!updateManagerObject.updateMetadata.isProcessRunning">
+            <ion-row>
+              <ion-col col-6>
+                <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button small full text-capitalize class="normalButton" (tap)="checkingForResourceUpdate()">Update</button>
+              </ion-col>
+              <ion-col col-6>
+                <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button small full text-capitalize class="normalButton" (tap)="autoSelect('selectAll')" *ngIf="!hasAllSelected"> Select All</button>
+                <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button small full text-capitalize class="normalButton" (tap)="autoSelect('unSelectAll')" *ngIf="hasAllSelected">Un-select all</button>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col >
+                <ion-list>
+                  <div *ngFor="let resourceObject of resources">
+                    <ion-item>
+                      <ion-label>{{ resourceObject.displayName }}</ion-label>
+                      <ion-checkbox [(ngModel)]="resourceObject.status" color="favorite"></ion-checkbox>
+                    </ion-item>
+                  </div>
+                </ion-list>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col >
+                <button ion-button large small text-capitalize class="normalButton" (tap)="checkingForResourceUpdate()">Update</button>
+              </ion-col>
+            </ion-row>
+          </div>
+
+
         </div>
 
         <div *ngIf="syncContent.id == 'clearData'">
