Fixing integration of setting on data entry form

--- a/src/pages/setting-home/setting-home.html
+++ b/src/pages/setting-home/setting-home.html
@@ -62,7 +62,7 @@
                     </ion-item>
                   </ion-col>
                 </ion-row>
-                <button  small  color="primary" ion-button full large text-capitalize (tap)="applySettings(settingContent)">
+                <button  color="primary" ion-button full large text-capitalize (tap)="applySettings(settingContent)">
                   Save
                 </button>
               </div>
@@ -90,7 +90,7 @@
                     </ion-item>
                   </ion-col>
                 </ion-row>
-                <button small color="primary" ion-button full large text-capitalize (tap)="applySettings(settingContent)">
+                <button color="primary" ion-button full large text-capitalize (tap)="applySettings(settingContent)">
                   Save
                 </button>
               </div>
