--- a/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -85,13 +85,21 @@
                     </div>
                   </div>
                 </div>
+                <div class="item-card" color="font-color" (click)="changeDashboardWidget(dashboardWidgets[currentWidgetIndex +1])" padding ion-button clear text-center text-capitalize>
+                  <ion-icon name="ios-arrow-forward-outline" ></ion-icon>
+                </div>
+
               </div>
               <div *ngIf="currentWidget.id != 'enrollment'">
                 <div>
                   <div *ngIf="programStages && programStages.length > 0">
                     <div *ngFor="let programStage of programStages">
                       <div *ngIf="widget.id == programStage.id">
-                        <program-stage-tracker-based [programStage]="programStage" [trackedEntityInstance]="trackedEntityInstance.id"></program-stage-tracker-based>
+                        <program-stage-tracker-based
+                          [programStage]="programStage"
+                          [trackedEntityInstance]="trackedEntityInstance.id"
+                          [currentWidgetIndex]="currentWidgetIndex"
+                          [isLastStage]="(currentWidgetIndex == programStages.length)"></program-stage-tracker-based>
                       </div>
                     </div>
                   </div>
